# paging-mission-control

./: README.md  eitr.py  main.py  prompt.md  pyproject.toml  satellite.py  solution.py  solve.py  tox.ini
.github/workflows/: lint-test.yaml  linting.yaml
mission_control/: __main__.py  process_data.py
paging_mission_control/: __main__.py  process_data.py
src/: paging_mission_control.py  test_paging_mission_control.py
tests/: test_main.py  test_process_data.py
