[tool.poetry]
name = "paging-mission-control"
version = "0.1.0"
description = "Ingest status telemetry data from satellites and create alert messages when necessary"
authors = ["jz9 <69145546+jonathan-d-zhang@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
flake8-annotations = "3.0.0"
flake8-bugbear = "23.2.13"
flake8-docstrings = "1.7.0"
flake8-string-format = "0.3.0"
flake8-tidy-imports = "4.8.0"
flake8-todo = "0.7"
flake8-isort = "6.0.0"
pytest = "7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 6
order_by_type = false
case_sensitive = true
combine_as_imports = true
line_length = 120
atomic = true
